--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -8,5 +8,6 @@
         <item>@font/agbalumo</item>
         <item>@font/asap</item>
         <item>@font/league_spartan_semibold</item>
+        <item>@font/merriweather_sans</item>
     </array>
 </resources>
