--- a/app/src/main/res/layout/slider_item.xml
+++ b/app/src/main/res/layout/slider_item.xml
@@ -45,6 +45,7 @@
         android:text="@string/intro"
         android:textAlignment="center"
         android:textSize="14sp"
+        android:textColor="#6F6F6F"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView85" />
