--- a/app/src/main/res/layout/cases_layout.xml
+++ b/app/src/main/res/layout/cases_layout.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/white">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="16dp"
+        android:text="Choose a theme to base the generated scenarios on"
+        android:textColor="#8C8C8C"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView6"
@@ -42,7 +55,9 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/edit_back"
         android:hint="Enter your age"
+        android:inputType="number"
         android:textColor="@color/black"
+        android:textColorHint="#646464"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,8 +72,10 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/edit_back"
-        android:hint="Enter the subject"
+        android:hint="Enter a subject (e.g., Studying English)"
+        android:maxLines="1"
         android:textColor="@color/black"
+        android:textColorHint="#646464"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,11 +88,13 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="95dp"
         android:layout_marginEnd="16dp"
-        android:enabled="false"
-        android:textSize="18sp"
+        android:layout_marginBottom="214dp"
         android:background="@drawable/button_back"
+        android:enabled="false"
         android:text="Generate Situations"
         android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ageET" />
