--- a/app/src/main/res/layout/person_fragment.xml
+++ b/app/src/main/res/layout/person_fragment.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <TextView
         android:id="@+id/textView6"
         android:layout_width="0dp"
@@ -86,7 +86,6 @@
         android:layout_marginBottom="36dp"
         android:text="Your situations will be served basis on your selection"
         android:textColor="#8C8C8C"
-        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
