--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -98,6 +98,9 @@
     <div class="container">
         <h1>MOC API DEMO</h1>
         <h6 style="color: red;">*Please click on try again in case of any errors.</h6>
+        <div id="game-info">
+            <p>The game consists of 6 questions. After answering all 6 questions, the game will end. Good luck!</p>
+        </div>
         <div id="form-container">
             <form id="generateForm">
                 <label for="language">Language:</label>
@@ -124,8 +127,6 @@
                     <option value="Turkish">Turkish</option>
                 </select>
 
-
-
                 <label for="age">Age:</label>
                 <select id="age" name="age" required>
                   <option value="">Select Age</option>
@@ -139,25 +140,17 @@
                     ageSelect.add(option);
                   }
                 </script>
-                
-
 
                 <label for="subject">Subject:</label>
                 <input type="text" id="subject" name="subject" required>
 
-
-                
                 <label for="difficulty">Difficulty Level:</label>
                 <select id="difficulty" name="difficulty" required>
                     <option value="">Select difficulty</option>
                     <option value="easy">easy</option>
                     <option value="normal">normal</option>
                     <option value="hard">hard</option>
-
-                 
                 </select>
-
-        
 
                 <button type="submit">Generate Cases</button>
             </form>
@@ -168,9 +161,9 @@
         <div id="response-container" class="hidden">
             <form id="caseForm">
                 <!-- Cases will be injected here -->
-                <!--<button type="submit" class="submit-button">Submit Answers</button>-->
             </form>
         </div>
+
     </div>
     <script src="{{ url_for('static', filename='files/js/script.js') }}"></script>
 </body>
