--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -168,8 +168,12 @@
             <form id="caseForm">
                 <!-- Cases will be injected here -->
             </form>
+
         </div>
 
+    </div>
+    <div id="analysis-section" class="hidden">
+        <!-- Content for analysis will go here -->
     </div>
     <script src="{{ url_for('static', filename='files/js/script.js') }}"></script>
 </body>
