--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -100,13 +100,12 @@
         <h1>MOC API DEMO</h1>
         <h6 style="color: red;">*Please click on try again in case of any errors.</h6>
         <div id="game-info">
-            <p>The game consists of 6 questions. After answering all 6 questions, the game will end. Good luck!</p>
+            <p>The game consists of 6 questions. After answering all 6 questions, the game will end and you can generate a deatiled analysis on your responses. Good luck!</p>
         </div>
         <div id="form-container">
             <form id="generateForm">
                 <label for="language">Language:</label>
                 <select id="language" name="language" required>
-                    <option value="">Select Language</option>
                     <option value="English">English</option>
                     <option value="Spanish">Spanish</option>
                     <option value="French">French</option>
@@ -130,7 +129,6 @@
 
                 <label for="age">Age:</label>
                 <select id="age" name="age" required>
-                  <option value="">Select Age</option>
                 </select>
                 <script>
                   const ageSelect = document.getElementById('age');
@@ -147,10 +145,16 @@
 
                 <label for="difficulty">Difficulty Level:</label>
                 <select id="difficulty" name="difficulty" required>
-                    <option value="">Select difficulty</option>
-                    <option value="easy">easy</option>
                     <option value="normal">normal</option>
+
+                    <option value="easy">easy</option>
                     <option value="hard">hard</option>
+                </select>
+
+                <label for="difficulty">Question Type:</label>
+                <select id="question_type" name="question_type" required>
+                    <option value="behavioral">behavioral</option>
+                    <option value="study">study</option>
                 </select>
 
                 <label for="role">Role (Will be used for analysis part):</label>  <!-- No longer hidden -->
